fix button not align

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -97,6 +97,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
 }
 
 .btn-forgetPass {
